[package]
name = "wasm-timer"
version = "0.1.0"
authors = ["c000 <c000@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "~0.2.68"

[dependencies.web-sys]
version = "~0.3.4"
features = [
  'Document',
  'DomTokenList',
  'Element',
  'HtmlDivElement',
  'HtmlProgressElement',
  'Window',
]

[dependencies.chrono]
version = "~0.4.19"
features = ['wasmbind']
